@@ -1,5 +1,9 @@
 5/31/2006 Bob Rossi <bob@brasko.net>
 
+	* autorelease.sh: Trying to update for svn.
+
+5/31/2006 Bob Rossi <bob@brasko.net>
+
 	* NEWS: Remove change regarding 'list' feature.
 
 5/23/2006 Bob Rossi <bob@brasko.net>
